Fix switch overflowing the viewport
UDS-1132

--- a/@utahdts/utah-design-system/css/6-components/base-components/forms/_switch.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/forms/_switch.scss
@@ -21,6 +21,10 @@
       transform: translateX(calc(100% + var(--spacing-2xs)));
       color: var(--gray-color);
       min-width: max-content;
+      overflow: hidden;
+      &.visually-hidden {
+        min-width: unset;
+      }
     }
     &__wrapper {
       min-width: 20px;
@@ -96,8 +100,6 @@
       font-size: var(--font-size-s);
       line-height: var(--font-size-s);
       &-on, &-off {
-        // display: none;
-        // width: 25px;
         width: calc(100% - var(--form-ele-2small1x));
         position: absolute;
         right: 2px;
@@ -106,7 +108,6 @@
         text-align: center;
         display: inline-block;
         &.show {
-          // display: block;
           opacity: 1;
         }
       }
@@ -128,7 +129,6 @@
   .input-wrapper {
     &--switch {
       label {
-        // padding: var(--spacing-3xs) var(--spacing) var(--spacing-3xs) var(--spacing-xl);
         padding: var(--spacing-3xs) var(--spacing-xs);
       }
     }
